# python

./: .env-exemple  .gitignore  a.py  aula117.json  aula16.py  aula4.py  aula8.py
extras - APIs/fastApi_course/: .coverage  pyproject.toml
extras - APIs/fastApi_course/fastapi_course/: app.py
extras - APIs/fastApi_course/tests/: test_app.py
modulo 1 - basic/: aula16.py  aula26.py  aula27.py  aula28.py  aula29.py  aula30.py  aula31.py  aula32.py  aula34.py  aula35.py  aula36.py  aula37.py  main.py  notes.md
modulo 2- functions/: CPF_validador_code_chall.py  aula1.py  aula10.py  aula11.py  aula12.py  aula13.py.PY  aula15.py  aula16.py  aula18..py  aula19.py  aula19b.py  aula2.py  aula20.py  aula21.py  aula22.py  aula23.py  aula24.py  aula25.py  aula27.py  aula28.py  aula3.py  aula4.py  aula5.py  aula6.py  aula7.py  aula8.py  aula9.py  todo-app-code-chall.py
modulo 2- functions/aula26/: aula26.md
modulo 3 - POO/: aua8.py  aula1.py  aula2.py  aula2_pt2.py  aula3.py  aula4.py  aula5-agre.py  aula5-assoc.py  aula5-comp.py  aula5_exercicio.py  aula6.py  aula6_pt_1.py  aula7_resume_abstract_class.py  aula9.py
modulo 3 - POO/aula10 - codechall/: banco.py  conta.py  main.py  pessoa.py
modulo 3 - POO/yt/: 1 - classe e context.py  2 - Encapsulamento.py  3 - Getters e Setters.py  readme.md
modulo 4 - recursos Python/: readme.md
modulo 5 - sqlite e python/: docker-compose.yml  env-example  main.py  mydb.sqlite3  select.py
modulo 6 - django/: a.html
modulo 6 - django/blog/: urls.py  (+1 more)
pratice-challenges/: easy_code_chall.py  medium_code_chall.py
txt/: aula116.txt
(+34 files in other folders)
